--- a/requirements.txt
+++ b/requirements.txt
@@ -1,225 +1,4 @@
-﻿absl-py==2.1.0
-altair==5.5.0
-altgraph==0.17.4
-anyio==4.2.0
-appdirs==1.4.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==23.2.0
-Babel==2.14.0
-beautifulsoup4==4.12.3
-bidict==0.23.1
-bleach==6.1.0
-blinker==1.7.0
-buildozer==1.5.0
-cachetools==5.5.0
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comm==0.2.1
-comtypes==1.2.1
-contourpy==1.2.0
-cssutils==2.9.0
-cycler==0.12.1
-Cython==0.29.19
-DateTime==5.4
-debugpy==1.8.0
-decorator==5.1.1
-defusedxml==0.7.1
-distlib==0.3.8
-easygui==0.98.3
-executing==2.0.1
-fanstatic==1.4
-fastjsonschema==2.19.1
-filelock==3.13.1
-Flask==3.0.1
-Flask-Cors==5.0.0
-flatbuffers==25.2.10
-fonttools==4.47.2
-fqdn==1.5.1
-fuzzywuzzy==0.18.0
-gast==0.6.0
-gitdb==4.0.11
-GitPython==3.1.43
-google-pasta==0.2.0
-grpcio==1.70.0
-gTTS==2.5.0
-h11==0.14.0
-h5py==3.13.0
-idna==3.6
-ipykernel==6.29.0
-ipython==8.21.0
-ipywidgets==8.1.1
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.19.1
-Jinja2==3.1.3
-joblib==1.3.2
-js==1.0
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jsx==0.6.5
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.9.0
-jupyter-lsp==2.2.2
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-jupyter_server==2.12.5
-jupyter_server_terminals==0.5.2
-jupyterlab==4.0.12
-jupyterlab-widgets==3.0.9
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.2
-keras==3.8.0
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.5
-Levenshtein==0.25.0
-libclang==18.1.1
-lxml==5.2.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.4
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mistune==3.0.2
-ml-dtypes==0.4.1
-MouseInfo==0.1.3
-namex==0.0.8
-narwhals==1.20.1
-nbclient==0.9.0
-nbconvert==7.14.2
-nbformat==5.9.2
-nest-asyncio==1.6.0
-nltk==3.8.1
-notebook==7.0.7
-notebook_shim==0.2.3
-npm==0.1.1
-numpy==1.26.4
-opt_einsum==3.4.0
-optional-django==0.1.0
-optree==0.14.0
-overrides==7.7.0
-packaging==23.2
-pandas==2.2.0
-pandocfilters==1.5.1
-parso==0.8.3
-pefile==2023.2.7
-pexpect==4.9.0
-pillow==10.2.0
-platformdirs==4.1.0
-plotly==6.0.0
-plyer==2.1.0
-progress==1.6
-prometheus-client==0.19.0
-prompt-toolkit==3.0.43
-protobuf==5.29.2
-psutil==5.9.8
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==15.0.0
-PyAudio==0.2.14
-PyAutoGUI==0.9.54
-pycparser==2.21
-pydeck==0.9.1
-pydub==0.25.1
-PyGetWindow==0.0.9
-Pygments==2.17.2
-pyinstaller==6.3.0
-pyinstaller-hooks-contrib==2024.0
-pyjokes==0.6.0
-pylance==0.9.8
-PyMsgBox==1.0.9
-pyparsing==3.1.1
-pyperclip==1.8.2
-pypiwin32==223
-PyRect==0.2.0
-PyScreeze==0.1.30
-pyshark==0.6
-python-dateutil==2.8.2
-python-engineio==4.9.0
-python-json-logger==2.0.7
-python-Levenshtein==0.25.0
-python-socketio==5.11.1
-pyttsx3==2.90
-pytweening==1.0.7
-pytz==2023.3.post1
-pywhatkit==5.4
-pywin32==306
-pywin32-ctypes==0.2.2
-pywinpty==2.0.12
-PyYAML==6.0.1
-pyzmq==25.1.2
-qtconsole==5.5.1
-QtPy==2.4.1
-rapidfuzz==3.6.1
-react==4.3.0
-referencing==0.33.0
-regex==2023.12.25
-requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.9.4
-rpds-py==0.17.1
-scikit-learn==1.6.1
-scipy==1.12.0
-seaborn==0.13.2
-Send2Trash==1.8.2
-sh==2.0.6
-simple-websocket==1.0.0
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.0
-soupsieve==2.5
-SpeechRecognition==3.10.1
-stack-data==0.6.3
-streamlit==1.41.1
-tenacity==9.0.0
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-tensorflow-io-gcs-filesystem==0.31.0
-tensorflow_intel==2.18.0
-tensorflow_keras==0.1
-termcolor==2.4.0
-terminado==0.18.0
-threadpoolctl==3.2.0
-tinycss2==1.2.1
-toml==0.10.2
-tornado==6.4
-tqdm==4.66.1
-traitlets==5.14.1
-types-python-dateutil==2.8.19.20240106
-typing_extensions==4.12.2
-tzdata==2023.4
-uri-template==1.3.0
-urllib3==2.1.0
-virtualenv==20.25.0
-watchdog==6.0.0
-wcwidth==0.2.13
-webcolors==1.13
-webencodings==0.5.1
-WebOb==1.8.7
-websocket-client==1.7.0
-Werkzeug==3.0.1
-widgetsnbextension==4.0.9
-Flask==2.0.1
-gunicorn==20.1.0
-numpy==1.21.1
-pandas==1.3.1
-scikit-learn==0.24.2
-wikipedia==1.4.0
-win10toast==0.9
-wrapt==1.17.2
-wsproto==1.2.0
-zope.interface==6.1
+flask
+numpy
+pandas
+gunicorn
